tests/good/typing/001-alpha-func.clap
** 'a -> 'a
def f (x) = x
