tests/bad/typing/030-func-arg-on-non-func.clap
** ('a -> 'b) -> 'a -> 'b
def apply (f) (x) = f (x)

val z = apply (42)
